Add IoUtils and PdfRenderSupport for improved PDF rendering and testing utilities